# AI-Powered-Marketplace-Assistant-Backend

./: README.md  main.py  pyproject.toml
ChatBot/: ConversionalBot.py
Promotional-Content-Generator/: PromotionalContentGenerator.py
Prompt Generation Engine/: Prompt_Generator.py
