[project]
name = "ai-powered-marketplace-assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-auth>=2.45.0",
    "google-cloud-aiplatform>=1.132.0",
    "grpcio>=1.76.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-google-vertexai>=3.2.0",
    "langchain-groq>=1.1.1",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
]
